--- a/index.html
+++ b/index.html
@@ -10,8 +10,65 @@
 </head>
 
 <body>
-    start
+    <div class="container">
+        <nav>
+            <div class="logo">
+                <p>Studio</p>
+            </div>
+            <div class="menu">
+                <p>menu</p>
+            </div>
+        </nav>
 
+        <h1>your site content goes here</h1>
+    </div>
+
+    <div class="loader">
+        <div class="img">
+            <img src="./assets/images/item-1.jpg" alt="">
+        </div>
+        <div class="img">
+            <img src="./assets/images/item-2.jpg" alt="">
+        </div>
+        <div class="img">
+            <img src="./assets/images/item-3.jpg" alt="">
+        </div>
+        <div class="img">
+            <img src="./assets/images/item-4.jpg" alt="">
+        </div>
+        <div class="img">
+            <img src="./assets/images/item-5.jpg" alt="">
+        </div>
+        <div class="img">
+            <img src="./assets/images/item-6.jpg" alt="">
+        </div>
+        <div class="img">
+            <img src="./assets/images/item-7.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="overlay">
+        <div class="col">
+            <h2>
+                <div>This unique</div>
+            </h2>
+            <h2>
+                <div>visual photographer</div>
+            </h2>
+            <h2>
+                <div>based in Ukraine</div>
+            </h2>
+        </div>
+        <div class="col">
+            <h2>
+                <div>
+                    <span>click</span> anywhere to continue
+                </div>
+            </h2>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
