--- a/index.html
+++ b/index.html
@@ -1,75 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Project</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
-</head>
-
-<body>
-    <div class="container">
-        <nav>
-            <div class="logo">
-                <p>Studio</p>
-            </div>
-            <div class="menu">
-                <p>menu</p>
-            </div>
-        </nav>
-
-        <h1>your site content goes here</h1>
-    </div>
-
-    <div class="loader">
-        <div class="img">
-            <img src="./assets/images/item-1.jpg" alt="">
-        </div>
-        <div class="img">
-            <img src="./assets/images/item-2.jpg" alt="">
-        </div>
-        <div class="img">
-            <img src="./assets/images/item-3.jpg" alt="">
-        </div>
-        <div class="img">
-            <img src="./assets/images/item-4.jpg" alt="">
-        </div>
-        <div class="img">
-            <img src="./assets/images/item-5.jpg" alt="">
-        </div>
-        <div class="img">
-            <img src="./assets/images/item-6.jpg" alt="">
-        </div>
-        <div class="img">
-            <img src="./assets/images/item-7.jpg" alt="">
-        </div>
-    </div>
-
-    <div class="overlay">
-        <div class="col">
-            <h2>
-                <div>This unique</div>
-            </h2>
-            <h2>
-                <div>visual photographer</div>
-            </h2>
-            <h2>
-                <div>based in Ukraine</div>
-            </h2>
-        </div>
-        <div class="col">
-            <h2>
-                <div>
-                    <span>click</span> anywhere to continue
+    <body>
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <p>Studio</p>
                 </div>
-            </h2>
+                <div class="menu">
+                    <p>menu</p>
+                </div>
+            </nav>
+
+            <h1>
+                what will happen next <br />
+                (next content goes here)
+            </h1>
         </div>
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
-    <script src="./assets/js/main.js"></script>
-</body>
+        <div class="loader">
+            <div class="img">
+                <img src="./assets/images/item-1.jpg" alt="" />
+            </div>
+            <div class="img">
+                <img src="./assets/images/item-2.jpg" alt="" />
+            </div>
+            <div class="img">
+                <img src="./assets/images/item-3.jpg" alt="" />
+            </div>
+            <div class="img">
+                <img src="./assets/images/item-4.jpg" alt="" />
+            </div>
+            <div class="img">
+                <img src="./assets/images/item-5.jpg" alt="" />
+            </div>
+            <div class="img">
+                <img src="./assets/images/item-6.jpg" alt="" />
+            </div>
+            <div class="img">
+                <img src="./assets/images/item-7.jpg" alt="" />
+            </div>
+        </div>
 
+        <div class="overlay">
+            <video loop muted autoplay>
+                <source src="./assets/videos/bg-overlay.mp4" />
+            </video>
+            <div class="col">
+                <h2>
+                    <div>This beautiful</div>
+                </h2>
+                <h2>
+                    <div>visual effect</div>
+                </h2>
+                <h2>
+                    <div>made in <span>Ukraine</span></div>
+                </h2>
+            </div>
+            <div class="col">
+                <h2 class="btn-title">
+                    <div><span>click</span> anywhere to continue</div>
+                </h2>
+            </div>
+        </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
+        <script src="./assets/js/main.js"></script>
+    </body>
 </html>
