03. usefull-things-104-intro-clippath. Bg, images.

--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
                 <source src="./assets/videos/bg-overlay.mp4" />
             </video>
             <div class="col">
-                <h2>
-                    <div>This beautiful</div>
-                </h2>
-                <h2>
-                    <div>visual effect</div>
-                </h2>
+                <h2><div>This beautiful</div></h2>
+                <h2><div>visual effect</div></h2>
                 <h2>
                     <div>made in <span>Ukraine</span></div>
                 </h2>
@@ -71,7 +67,8 @@
             </div>
         </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+
         <script src="./assets/js/main.js"></script>
     </body>
 </html>
